clang/test/BSC/Negative/Generic/StructAndFunction/invalid_paramete_2/invalid_paramete_2.cbs
// RUN: %clang_cc1 -verify %s

void test2<T, int>(T a)         // expected-error {{expected template parameter}}
{
  int c = 1;
}

int main() {
  return 0;
}